# fast-blog

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  startup.sh
backend/api/: app.py  database.py  models.py  repositories.py  schemas.py  security.py  settings.py
backend/api/core/: database.py  schemas.py  security.py  settings.py
backend/api/models/: post.py  posts_tags.py  profile.py  tag.py  token.py  user.py
backend/api/repositories/: base_repository.py  post_repository.py  profile_repository.py  tag_repository.py  user_repository.py
backend/api/routers/: auth.py  authors.py  posts.py  tags.py  users.py
backend/api/services/: token_service.py
backend/migrations/: env.py
backend/migrations/versions/: 07cd98c4ee7e_loading_tags_when_loading_posts.py  09fd5f085537_making_post_s_published_at_nullable_and_.py  2a0b59028166_create_post_table_and_updating_.py  2be820a423f5_create_profile_fields_firstname_and_.py  2d03cc5e352c_create_users_table.py  5e51e46880ba_creating_the_users_table.py  6da375e439aa_removing_unique_contraint_from_author_.py  84a149b48bff_creating_the_users_table.py  87c3de6b7c7a_fixing_wrong_email_type.py  88375a25fc65_create_users_profiles_and_tags_tables.py  b071579f8d5a_creating_the_posts_table.py  decab852f0d9_creating_the_refresh_tokens_table.py  e05b60c6772e_create_profiles_table.py  e7e45b565036_creating_the_comments_table.py
backend/src/: main.py
backend/src/core/: database.py  dependencies.py  settings.py
backend/src/dependencies/: auth.py
backend/src/models/: __init__.py  _mixins.py  comment.py  post.py  user.py
backend/src/repositories/: comment_repository.py  post_repository.py  user_repository.py
backend/src/routers/: auth.py  comments.py  posts.py  users.py
backend/src/schemas/: comment.py  message.py  pagination.py  posts.py  token.py  user.py
backend/src/services/: comment_service.py  post_service.py  user_service.py
backend/src/tests/: conftest.py  test_auth.py  test_comments.py  test_posts.py  test_root.py  test_users.py
backend/src/utils/: security.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_repositories.py  test_security.py
backend/tests/models/: test_post.py  test_profile.py  test_tag.py  test_user.py
backend/tests/routers/: test_authors.py  test_posts.py  test_tags.py  test_users.py
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.routing.test.tsx  App.tsx  config.ts
frontend/src/api/: axios.ts  interceptors.ts
frontend/src/auth/: authStore.ts
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx  Pagination.tsx  PostList.tsx
frontend/src/components/authors/: AuthorInfo.tsx
frontend/src/components/posts/: PostContent.tsx  PostDetail.tsx  PostList.tsx
frontend/src/pages/: Author.tsx  Contact.tsx  Home.tsx  Login.tsx  Logout.tsx  NotFound.tsx  Post.tsx  PostSearch.tsx  Posts.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: authorService.ts  postService.ts  tokenService.ts
