[tool.poetry]
name = "fast-blog-backend"
version = "0.1.0"
description = "Fast Blog backend"
authors = ["TheCamilovisk <camilolgon@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.12" }
uvicorn = { extras = ["standard"], version = "^0.34.2" }
pydantic = "^2.11.4"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
passlib = { extras = ["argon"], version = "^1.7.4" }
pydantic-settings = "^2.9.1"
psycopg = { extras = ["binary"], version = "^3.2.8" }
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
ruff = "^0.11.9"
taskipy = "^1.14.1"
pytest-cov = "^6.1.1"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[tool.coverage.run]
concurrency = ['thread', 'greenlet']
